# pixelgreat

./: .gitignore  README.md  README_pypi.md  environment.yml  pyproject.toml
pixelgreat/: __init__.py  constants.py  core.py  filter.py  filters.py  helpers.py
tests/: test_filters_manual.py  test_helpers.py
