[project]
name = "pixelgreat"
version = "0.1.0"
description = "A highly realistic RGB pixel filter"
license= {file = "LICENSE"}
authors = [
    {name = "Ella Jameson", email = "ellagjameson@gmail.com"}
]
readme = "README_pypi.MD"
classifiers = [
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion"
]
dependencies = [
    "Pillow>10.0"
]

[project.urls]
homepage = "https://github.com/nimaid/pixelgreat"
repository = "https://github.com/nimaid/pixelgreat"

[project.scripts]
pixelgreat = "pixelgreat.core:run_single"
pixelgreat-sequence = "pixelgreat.core:run_sequence"