[project]
name = "pixelgreat"
version = "1.4.2"
description = "A highly realistic RGB pixel filter"
license= {file = "LICENSE"}
authors = [
    {name = "Ella Jameson", email = "ellagjameson@gmail.com"}
]
readme = "README_pypi.MD"
classifiers = [
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion"
]
dependencies = [
    "Pillow>10.0"
]

[project.urls]
homepage = "https://github.com/nimaid/pixelgreat"
repository = "https://github.com/nimaid/pixelgreat"
Issues = "https://github.com/nimaid/pixelgreat/issues"

[project.scripts]
pixelgreat = "pixelgreat.core:single"
pixelgreat-sequence = "pixelgreat.core:sequence"